feat: Creation of the find-habit-by-id service, route and test
